Adds access policy per-key. You can restrict access to some models or provider on api-key. Also added opencode provider and fixes some bugs and speed improve
