# internal/models/apikey.go
@@ -11,11 +11,13 @@ type ApiKey struct {
 	Key  string `json:"key"`
 	Name string `json:"name"`
 
-	QuotaSetted    bool        `json:"quota_setted"`
-	QuotaTokens    int64       `json:"quota_tokens"`
-	QuotaPeriod    QuotaPeriod `json:"quota_period"`
-	QuotaResetAt   time.Time   `json:"quota_reset_at"`
-	ReservedTokens int64       `json:"reserved_tokens"`
+	QuotaSetted         bool        `json:"quota_setted"`
+	QuotaTokens         int64       `json:"quota_tokens"`
+	QuotaPeriod         QuotaPeriod `json:"quota_period"`
+	QuotaResetAt        time.Time   `json:"quota_reset_at"`
+	ReservedTokens      int64       `json:"reserved_tokens"`
+	RestrictedProviders []string    `json:"restricted_providers"`
+	RestrictedModels    []string    `json:"restricted_models"`
 
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
@@ -33,6 +35,25 @@ const (
 	QuotaPeriodHour    QuotaPeriod = "hour"
 	QuotaPeriodMinute  QuotaPeriod = "minute"
 )
+
+func (q QuotaPeriod) ToDuration() time.Duration {
+	switch q {
+	case QuotaPeriodForever:
+		return time.Hour * 24 * 365 * 10
+	case QuotaPeriodMonth:
+		return time.Hour * 24 * 30
+	case QuotaPeriodWeek:
+		return time.Hour * 24 * 7
+	case QuotaPeriodDay:
+		return time.Hour * 24
+	case QuotaPeriodHour:
+		return time.Hour
+	case QuotaPeriodMinute:
+		return time.Minute
+	default:
+		return 0
+	}
+}
 
 func ProtoToQuotaPeriod(a *aoyorouter.QuotaResetStrategy) QuotaPeriod {
 	switch *a {
